Kaggle Notebook | mcts-catboost-baseline | Version 19

--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5937c9cf",
+   "id": "c66c34a9",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:27.547521Z",
-     "iopub.status.busy": "2024-11-26T23:23:27.547142Z",
-     "iopub.status.idle": "2024-11-26T23:23:30.012219Z",
-     "shell.execute_reply": "2024-11-26T23:23:30.011234Z"
+     "iopub.execute_input": "2024-11-26T23:23:46.581365Z",
+     "iopub.status.busy": "2024-11-26T23:23:46.580953Z",
+     "iopub.status.idle": "2024-11-26T23:23:49.589786Z",
+     "shell.execute_reply": "2024-11-26T23:23:49.588306Z"
     },
     "papermill": {
-     "duration": 2.472274,
-     "end_time": "2024-11-26T23:23:30.014220",
+     "duration": 3.017291,
+     "end_time": "2024-11-26T23:23:49.592862",
      "exception": false,
-     "start_time": "2024-11-26T23:23:27.541946",
+     "start_time": "2024-11-26T23:23:46.575571",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20b1dddf",
+   "id": "8e543143",
    "metadata": {
     "papermill": {
-     "duration": 0.002516,
-     "end_time": "2024-11-26T23:23:30.019753",
+     "duration": 0.003169,
+     "end_time": "2024-11-26T23:23:49.599751",
      "exception": false,
-     "start_time": "2024-11-26T23:23:30.017237",
+     "start_time": "2024-11-26T23:23:49.596582",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8f453674",
+   "id": "2cb7d28f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:30.026413Z",
-     "iopub.status.busy": "2024-11-26T23:23:30.025971Z",
-     "iopub.status.idle": "2024-11-26T23:23:34.401432Z",
-     "shell.execute_reply": "2024-11-26T23:23:34.400411Z"
+     "iopub.execute_input": "2024-11-26T23:23:49.608554Z",
+     "iopub.status.busy": "2024-11-26T23:23:49.607981Z",
+     "iopub.status.idle": "2024-11-26T23:23:53.857868Z",
+     "shell.execute_reply": "2024-11-26T23:23:53.856551Z"
     },
     "papermill": {
-     "duration": 4.381066,
-     "end_time": "2024-11-26T23:23:34.403448",
+     "duration": 4.256714,
+     "end_time": "2024-11-26T23:23:53.860219",
      "exception": false,
-     "start_time": "2024-11-26T23:23:30.022382",
+     "start_time": "2024-11-26T23:23:49.603505",
      "status": "completed"
     },
     "tags": []
@@ -110,19 +110,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eb8089d0",
+   "id": "d359100c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:34.411016Z",
-     "iopub.status.busy": "2024-11-26T23:23:34.410223Z",
-     "iopub.status.idle": "2024-11-26T23:23:34.416882Z",
-     "shell.execute_reply": "2024-11-26T23:23:34.416010Z"
+     "iopub.execute_input": "2024-11-26T23:23:53.868578Z",
+     "iopub.status.busy": "2024-11-26T23:23:53.868131Z",
+     "iopub.status.idle": "2024-11-26T23:23:53.876078Z",
+     "shell.execute_reply": "2024-11-26T23:23:53.874944Z"
     },
     "papermill": {
-     "duration": 0.012212,
-     "end_time": "2024-11-26T23:23:34.418662",
+     "duration": 0.015052,
+     "end_time": "2024-11-26T23:23:53.878653",
      "exception": false,
-     "start_time": "2024-11-26T23:23:34.406450",
+     "start_time": "2024-11-26T23:23:53.863601",
      "status": "completed"
     },
     "tags": []
@@ -146,19 +146,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a520835b",
+   "id": "5e4a4c4a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:34.426019Z",
-     "iopub.status.busy": "2024-11-26T23:23:34.425293Z",
-     "iopub.status.idle": "2024-11-26T23:23:34.435589Z",
-     "shell.execute_reply": "2024-11-26T23:23:34.434705Z"
+     "iopub.execute_input": "2024-11-26T23:23:53.888617Z",
+     "iopub.status.busy": "2024-11-26T23:23:53.888070Z",
+     "iopub.status.idle": "2024-11-26T23:23:53.900584Z",
+     "shell.execute_reply": "2024-11-26T23:23:53.899353Z"
     },
     "papermill": {
-     "duration": 0.015877,
-     "end_time": "2024-11-26T23:23:34.437477",
+     "duration": 0.02068,
+     "end_time": "2024-11-26T23:23:53.902783",
      "exception": false,
-     "start_time": "2024-11-26T23:23:34.421600",
+     "start_time": "2024-11-26T23:23:53.882103",
      "status": "completed"
     },
     "tags": []
@@ -242,8 +242,8 @@
     "# model_catboost = ModelInference(text_cols=[\"LudRules\",], **catboost_artifacts)\n",
     "\n",
     "model_catboost = ModelInference(\n",
-    "    # models=catboost_artifacts[\"models\"][:5],\n",
-    "    models=catboost_artifacts[\"models\"][5:10],\n",
+    "    models=catboost_artifacts[\"models\"][:5],\n",
+    "    # models=catboost_artifacts[\"models\"][5:10],\n",
     "    # models=catboost_artifacts[\"models\"][10:],\n",
     "    # models=catboost_artifacts[\"models\"],\n",
     "    numerical_cols=catboost_artifacts[\"numerical_cols\"],\n",
@@ -257,19 +257,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1e35e796",
+   "id": "0386a580",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:34.445089Z",
-     "iopub.status.busy": "2024-11-26T23:23:34.444384Z",
-     "iopub.status.idle": "2024-11-26T23:23:34.598757Z",
-     "shell.execute_reply": "2024-11-26T23:23:34.597729Z"
+     "iopub.execute_input": "2024-11-26T23:23:53.911833Z",
+     "iopub.status.busy": "2024-11-26T23:23:53.911419Z",
+     "iopub.status.idle": "2024-11-26T23:23:54.102651Z",
+     "shell.execute_reply": "2024-11-26T23:23:54.101413Z"
     },
     "papermill": {
-     "duration": 0.160142,
-     "end_time": "2024-11-26T23:23:34.600651",
+     "duration": 0.198297,
+     "end_time": "2024-11-26T23:23:54.104915",
      "exception": false,
-     "start_time": "2024-11-26T23:23:34.440509",
+     "start_time": "2024-11-26T23:23:53.906618",
      "status": "completed"
     },
     "tags": []
@@ -278,7 +278,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.13764542, -0.16669373, -0.0130353 ])"
+       "array([ 0.09798549, -0.13745244, -0.03180037])"
       ]
      },
      "execution_count": 5,
@@ -294,13 +294,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afbfcdf2",
+   "id": "ed8b8882",
    "metadata": {
     "papermill": {
-     "duration": 0.002802,
-     "end_time": "2024-11-26T23:23:34.606640",
+     "duration": 0.00316,
+     "end_time": "2024-11-26T23:23:54.111705",
      "exception": false,
-     "start_time": "2024-11-26T23:23:34.603838",
+     "start_time": "2024-11-26T23:23:54.108545",
      "status": "completed"
     },
     "tags": []
@@ -313,19 +313,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a5b4bff4",
+   "id": "2bb42329",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:34.613862Z",
-     "iopub.status.busy": "2024-11-26T23:23:34.613512Z",
-     "iopub.status.idle": "2024-11-26T23:23:35.015816Z",
-     "shell.execute_reply": "2024-11-26T23:23:35.014582Z"
+     "iopub.execute_input": "2024-11-26T23:23:54.120361Z",
+     "iopub.status.busy": "2024-11-26T23:23:54.119898Z",
+     "iopub.status.idle": "2024-11-26T23:23:54.606355Z",
+     "shell.execute_reply": "2024-11-26T23:23:54.605077Z"
     },
     "papermill": {
-     "duration": 0.410807,
-     "end_time": "2024-11-26T23:23:35.020363",
+     "duration": 0.493836,
+     "end_time": "2024-11-26T23:23:54.608988",
      "exception": false,
-     "start_time": "2024-11-26T23:23:34.609556",
+     "start_time": "2024-11-26T23:23:54.115152",
      "status": "completed"
     },
     "tags": []
@@ -340,19 +340,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "17306c40",
+   "id": "3bf91516",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:35.031965Z",
-     "iopub.status.busy": "2024-11-26T23:23:35.030828Z",
-     "iopub.status.idle": "2024-11-26T23:23:35.036531Z",
-     "shell.execute_reply": "2024-11-26T23:23:35.035402Z"
+     "iopub.execute_input": "2024-11-26T23:23:54.617973Z",
+     "iopub.status.busy": "2024-11-26T23:23:54.617466Z",
+     "iopub.status.idle": "2024-11-26T23:23:54.623635Z",
+     "shell.execute_reply": "2024-11-26T23:23:54.622664Z"
     },
     "papermill": {
-     "duration": 0.013036,
-     "end_time": "2024-11-26T23:23:35.038857",
+     "duration": 0.013754,
+     "end_time": "2024-11-26T23:23:54.626481",
      "exception": false,
-     "start_time": "2024-11-26T23:23:35.025821",
+     "start_time": "2024-11-26T23:23:54.612727",
      "status": "completed"
     },
     "tags": []
@@ -369,19 +369,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8ae5f598",
+   "id": "8e52583b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:35.048611Z",
-     "iopub.status.busy": "2024-11-26T23:23:35.047464Z",
-     "iopub.status.idle": "2024-11-26T23:23:35.532162Z",
-     "shell.execute_reply": "2024-11-26T23:23:35.531332Z"
+     "iopub.execute_input": "2024-11-26T23:23:54.634943Z",
+     "iopub.status.busy": "2024-11-26T23:23:54.634575Z",
+     "iopub.status.idle": "2024-11-26T23:23:55.165861Z",
+     "shell.execute_reply": "2024-11-26T23:23:55.164529Z"
     },
     "papermill": {
-     "duration": 0.492264,
-     "end_time": "2024-11-26T23:23:35.534392",
+     "duration": 0.538538,
+     "end_time": "2024-11-26T23:23:55.168492",
      "exception": false,
-     "start_time": "2024-11-26T23:23:35.042128",
+     "start_time": "2024-11-26T23:23:54.629954",
      "status": "completed"
     },
     "tags": []
@@ -403,13 +403,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "079f0f89",
+   "id": "16eb7ad3",
    "metadata": {
     "papermill": {
-     "duration": 0.004013,
-     "end_time": "2024-11-26T23:23:35.541707",
+     "duration": 0.004524,
+     "end_time": "2024-11-26T23:23:55.176808",
      "exception": false,
-     "start_time": "2024-11-26T23:23:35.537694",
+     "start_time": "2024-11-26T23:23:55.172284",
      "status": "completed"
     },
     "tags": []
@@ -459,14 +459,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 11.148089,
-   "end_time": "2024-11-26T23:23:36.264523",
+   "duration": 12.78251,
+   "end_time": "2024-11-26T23:23:56.004591",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-26T23:23:25.116434",
+   "start_time": "2024-11-26T23:23:43.222081",
    "version": "2.6.0"
   }
  },
