--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c66c34a9",
+   "id": "9b3ee115",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:46.581365Z",
-     "iopub.status.busy": "2024-11-26T23:23:46.580953Z",
-     "iopub.status.idle": "2024-11-26T23:23:49.589786Z",
-     "shell.execute_reply": "2024-11-26T23:23:49.588306Z"
+     "iopub.execute_input": "2024-11-26T23:23:48.945006Z",
+     "iopub.status.busy": "2024-11-26T23:23:48.944485Z",
+     "iopub.status.idle": "2024-11-26T23:23:52.016091Z",
+     "shell.execute_reply": "2024-11-26T23:23:52.015021Z"
     },
     "papermill": {
-     "duration": 3.017291,
-     "end_time": "2024-11-26T23:23:49.592862",
+     "duration": 3.079322,
+     "end_time": "2024-11-26T23:23:52.018342",
      "exception": false,
-     "start_time": "2024-11-26T23:23:46.575571",
+     "start_time": "2024-11-26T23:23:48.939020",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e543143",
+   "id": "158b2f92",
    "metadata": {
     "papermill": {
-     "duration": 0.003169,
-     "end_time": "2024-11-26T23:23:49.599751",
+     "duration": 0.002676,
+     "end_time": "2024-11-26T23:23:52.024278",
      "exception": false,
-     "start_time": "2024-11-26T23:23:49.596582",
+     "start_time": "2024-11-26T23:23:52.021602",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2cb7d28f",
+   "id": "ea855918",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:49.608554Z",
-     "iopub.status.busy": "2024-11-26T23:23:49.607981Z",
-     "iopub.status.idle": "2024-11-26T23:23:53.857868Z",
-     "shell.execute_reply": "2024-11-26T23:23:53.856551Z"
+     "iopub.execute_input": "2024-11-26T23:23:52.031693Z",
+     "iopub.status.busy": "2024-11-26T23:23:52.031144Z",
+     "iopub.status.idle": "2024-11-26T23:23:57.054735Z",
+     "shell.execute_reply": "2024-11-26T23:23:57.053671Z"
     },
     "papermill": {
-     "duration": 4.256714,
-     "end_time": "2024-11-26T23:23:53.860219",
+     "duration": 5.030106,
+     "end_time": "2024-11-26T23:23:57.057214",
      "exception": false,
-     "start_time": "2024-11-26T23:23:49.603505",
+     "start_time": "2024-11-26T23:23:52.027108",
      "status": "completed"
     },
     "tags": []
@@ -110,19 +110,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d359100c",
+   "id": "93e252cc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:53.868578Z",
-     "iopub.status.busy": "2024-11-26T23:23:53.868131Z",
-     "iopub.status.idle": "2024-11-26T23:23:53.876078Z",
-     "shell.execute_reply": "2024-11-26T23:23:53.874944Z"
+     "iopub.execute_input": "2024-11-26T23:23:57.065613Z",
+     "iopub.status.busy": "2024-11-26T23:23:57.065216Z",
+     "iopub.status.idle": "2024-11-26T23:23:57.073004Z",
+     "shell.execute_reply": "2024-11-26T23:23:57.071827Z"
     },
     "papermill": {
-     "duration": 0.015052,
-     "end_time": "2024-11-26T23:23:53.878653",
+     "duration": 0.014484,
+     "end_time": "2024-11-26T23:23:57.075335",
      "exception": false,
-     "start_time": "2024-11-26T23:23:53.863601",
+     "start_time": "2024-11-26T23:23:57.060851",
      "status": "completed"
     },
     "tags": []
@@ -146,19 +146,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5e4a4c4a",
+   "id": "9f63db8b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:53.888617Z",
-     "iopub.status.busy": "2024-11-26T23:23:53.888070Z",
-     "iopub.status.idle": "2024-11-26T23:23:53.900584Z",
-     "shell.execute_reply": "2024-11-26T23:23:53.899353Z"
+     "iopub.execute_input": "2024-11-26T23:23:57.084046Z",
+     "iopub.status.busy": "2024-11-26T23:23:57.083639Z",
+     "iopub.status.idle": "2024-11-26T23:23:57.094878Z",
+     "shell.execute_reply": "2024-11-26T23:23:57.093801Z"
     },
     "papermill": {
-     "duration": 0.02068,
-     "end_time": "2024-11-26T23:23:53.902783",
+     "duration": 0.018002,
+     "end_time": "2024-11-26T23:23:57.097021",
      "exception": false,
-     "start_time": "2024-11-26T23:23:53.882103",
+     "start_time": "2024-11-26T23:23:57.079019",
      "status": "completed"
     },
     "tags": []
@@ -242,10 +242,10 @@
     "# model_catboost = ModelInference(text_cols=[\"LudRules\",], **catboost_artifacts)\n",
     "\n",
     "model_catboost = ModelInference(\n",
-    "    models=catboost_artifacts[\"models\"][:5],\n",
+    "    # models=catboost_artifacts[\"models\"][:5],\n",
     "    # models=catboost_artifacts[\"models\"][5:10],\n",
     "    # models=catboost_artifacts[\"models\"][10:],\n",
-    "    # models=catboost_artifacts[\"models\"],\n",
+    "    models=catboost_artifacts[\"models\"],\n",
     "    numerical_cols=catboost_artifacts[\"numerical_cols\"],\n",
     "    categorical_cols=catboost_artifacts[\"categorical_cols\"],\n",
     "    # text_cols=[\"LudRules\"],\n",
@@ -257,19 +257,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0386a580",
+   "id": "b39c7b91",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:53.911833Z",
-     "iopub.status.busy": "2024-11-26T23:23:53.911419Z",
-     "iopub.status.idle": "2024-11-26T23:23:54.102651Z",
-     "shell.execute_reply": "2024-11-26T23:23:54.101413Z"
+     "iopub.execute_input": "2024-11-26T23:23:57.105101Z",
+     "iopub.status.busy": "2024-11-26T23:23:57.104768Z",
+     "iopub.status.idle": "2024-11-26T23:23:57.316772Z",
+     "shell.execute_reply": "2024-11-26T23:23:57.315660Z"
     },
     "papermill": {
-     "duration": 0.198297,
-     "end_time": "2024-11-26T23:23:54.104915",
+     "duration": 0.218728,
+     "end_time": "2024-11-26T23:23:57.319100",
      "exception": false,
-     "start_time": "2024-11-26T23:23:53.906618",
+     "start_time": "2024-11-26T23:23:57.100372",
      "status": "completed"
     },
     "tags": []
@@ -278,7 +278,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.09798549, -0.13745244, -0.03180037])"
+       "array([ 0.12559595, -0.14268564, -0.01896763])"
       ]
      },
      "execution_count": 5,
@@ -294,13 +294,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed8b8882",
+   "id": "307db231",
    "metadata": {
     "papermill": {
-     "duration": 0.00316,
-     "end_time": "2024-11-26T23:23:54.111705",
+     "duration": 0.002959,
+     "end_time": "2024-11-26T23:23:57.325617",
      "exception": false,
-     "start_time": "2024-11-26T23:23:54.108545",
+     "start_time": "2024-11-26T23:23:57.322658",
      "status": "completed"
     },
     "tags": []
@@ -313,19 +313,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2bb42329",
+   "id": "95dbb184",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:54.120361Z",
-     "iopub.status.busy": "2024-11-26T23:23:54.119898Z",
-     "iopub.status.idle": "2024-11-26T23:23:54.606355Z",
-     "shell.execute_reply": "2024-11-26T23:23:54.605077Z"
+     "iopub.execute_input": "2024-11-26T23:23:57.334144Z",
+     "iopub.status.busy": "2024-11-26T23:23:57.333202Z",
+     "iopub.status.idle": "2024-11-26T23:23:57.857368Z",
+     "shell.execute_reply": "2024-11-26T23:23:57.856465Z"
     },
     "papermill": {
-     "duration": 0.493836,
-     "end_time": "2024-11-26T23:23:54.608988",
+     "duration": 0.530867,
+     "end_time": "2024-11-26T23:23:57.859653",
      "exception": false,
-     "start_time": "2024-11-26T23:23:54.115152",
+     "start_time": "2024-11-26T23:23:57.328786",
      "status": "completed"
     },
     "tags": []
@@ -340,19 +340,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3bf91516",
+   "id": "d69d006a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:54.617973Z",
-     "iopub.status.busy": "2024-11-26T23:23:54.617466Z",
-     "iopub.status.idle": "2024-11-26T23:23:54.623635Z",
-     "shell.execute_reply": "2024-11-26T23:23:54.622664Z"
+     "iopub.execute_input": "2024-11-26T23:23:57.868132Z",
+     "iopub.status.busy": "2024-11-26T23:23:57.867651Z",
+     "iopub.status.idle": "2024-11-26T23:23:57.873375Z",
+     "shell.execute_reply": "2024-11-26T23:23:57.872282Z"
     },
     "papermill": {
-     "duration": 0.013754,
-     "end_time": "2024-11-26T23:23:54.626481",
+     "duration": 0.012244,
+     "end_time": "2024-11-26T23:23:57.875481",
      "exception": false,
-     "start_time": "2024-11-26T23:23:54.612727",
+     "start_time": "2024-11-26T23:23:57.863237",
      "status": "completed"
     },
     "tags": []
@@ -369,19 +369,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8e52583b",
+   "id": "317f9694",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:54.634943Z",
-     "iopub.status.busy": "2024-11-26T23:23:54.634575Z",
-     "iopub.status.idle": "2024-11-26T23:23:55.165861Z",
-     "shell.execute_reply": "2024-11-26T23:23:55.164529Z"
+     "iopub.execute_input": "2024-11-26T23:23:57.883896Z",
+     "iopub.status.busy": "2024-11-26T23:23:57.883543Z",
+     "iopub.status.idle": "2024-11-26T23:23:58.473988Z",
+     "shell.execute_reply": "2024-11-26T23:23:58.473001Z"
     },
     "papermill": {
-     "duration": 0.538538,
-     "end_time": "2024-11-26T23:23:55.168492",
+     "duration": 0.597632,
+     "end_time": "2024-11-26T23:23:58.476543",
      "exception": false,
-     "start_time": "2024-11-26T23:23:54.629954",
+     "start_time": "2024-11-26T23:23:57.878911",
      "status": "completed"
     },
     "tags": []
@@ -403,13 +403,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16eb7ad3",
+   "id": "c0c08564",
    "metadata": {
     "papermill": {
-     "duration": 0.004524,
-     "end_time": "2024-11-26T23:23:55.176808",
+     "duration": 0.003899,
+     "end_time": "2024-11-26T23:23:58.483891",
      "exception": false,
-     "start_time": "2024-11-26T23:23:55.172284",
+     "start_time": "2024-11-26T23:23:58.479992",
      "status": "completed"
     },
     "tags": []
@@ -459,14 +459,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 12.78251,
-   "end_time": "2024-11-26T23:23:56.004591",
+   "duration": 13.133214,
+   "end_time": "2024-11-26T23:23:59.308301",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-26T23:23:43.222081",
+   "start_time": "2024-11-26T23:23:46.175087",
    "version": "2.6.0"
   }
  },
