--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9b3ee115",
+   "id": "91e1a8f1",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:48.945006Z",
-     "iopub.status.busy": "2024-11-26T23:23:48.944485Z",
-     "iopub.status.idle": "2024-11-26T23:23:52.016091Z",
-     "shell.execute_reply": "2024-11-26T23:23:52.015021Z"
+     "iopub.execute_input": "2024-11-26T23:24:09.558607Z",
+     "iopub.status.busy": "2024-11-26T23:24:09.558163Z",
+     "iopub.status.idle": "2024-11-26T23:24:12.715781Z",
+     "shell.execute_reply": "2024-11-26T23:24:12.714369Z"
     },
     "papermill": {
-     "duration": 3.079322,
-     "end_time": "2024-11-26T23:23:52.018342",
+     "duration": 3.167305,
+     "end_time": "2024-11-26T23:24:12.718164",
      "exception": false,
-     "start_time": "2024-11-26T23:23:48.939020",
+     "start_time": "2024-11-26T23:24:09.550859",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "158b2f92",
+   "id": "6435261b",
    "metadata": {
     "papermill": {
-     "duration": 0.002676,
-     "end_time": "2024-11-26T23:23:52.024278",
+     "duration": 0.002891,
+     "end_time": "2024-11-26T23:24:12.724656",
      "exception": false,
-     "start_time": "2024-11-26T23:23:52.021602",
+     "start_time": "2024-11-26T23:24:12.721765",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ea855918",
+   "id": "4027d16c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:52.031693Z",
-     "iopub.status.busy": "2024-11-26T23:23:52.031144Z",
-     "iopub.status.idle": "2024-11-26T23:23:57.054735Z",
-     "shell.execute_reply": "2024-11-26T23:23:57.053671Z"
+     "iopub.execute_input": "2024-11-26T23:24:12.732736Z",
+     "iopub.status.busy": "2024-11-26T23:24:12.732179Z",
+     "iopub.status.idle": "2024-11-26T23:24:18.143613Z",
+     "shell.execute_reply": "2024-11-26T23:24:18.142418Z"
     },
     "papermill": {
-     "duration": 5.030106,
-     "end_time": "2024-11-26T23:23:57.057214",
+     "duration": 5.41838,
+     "end_time": "2024-11-26T23:24:18.146110",
      "exception": false,
-     "start_time": "2024-11-26T23:23:52.027108",
+     "start_time": "2024-11-26T23:24:12.727730",
      "status": "completed"
     },
     "tags": []
@@ -110,19 +110,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "93e252cc",
+   "id": "2994dca9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:57.065613Z",
-     "iopub.status.busy": "2024-11-26T23:23:57.065216Z",
-     "iopub.status.idle": "2024-11-26T23:23:57.073004Z",
-     "shell.execute_reply": "2024-11-26T23:23:57.071827Z"
+     "iopub.execute_input": "2024-11-26T23:24:18.154308Z",
+     "iopub.status.busy": "2024-11-26T23:24:18.153930Z",
+     "iopub.status.idle": "2024-11-26T23:24:18.162103Z",
+     "shell.execute_reply": "2024-11-26T23:24:18.160586Z"
     },
     "papermill": {
-     "duration": 0.014484,
-     "end_time": "2024-11-26T23:23:57.075335",
+     "duration": 0.015052,
+     "end_time": "2024-11-26T23:24:18.164646",
      "exception": false,
-     "start_time": "2024-11-26T23:23:57.060851",
+     "start_time": "2024-11-26T23:24:18.149594",
      "status": "completed"
     },
     "tags": []
@@ -146,19 +146,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9f63db8b",
+   "id": "aa2d0998",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:57.084046Z",
-     "iopub.status.busy": "2024-11-26T23:23:57.083639Z",
-     "iopub.status.idle": "2024-11-26T23:23:57.094878Z",
-     "shell.execute_reply": "2024-11-26T23:23:57.093801Z"
+     "iopub.execute_input": "2024-11-26T23:24:18.173025Z",
+     "iopub.status.busy": "2024-11-26T23:24:18.172605Z",
+     "iopub.status.idle": "2024-11-26T23:24:18.184461Z",
+     "shell.execute_reply": "2024-11-26T23:24:18.183233Z"
     },
     "papermill": {
-     "duration": 0.018002,
-     "end_time": "2024-11-26T23:23:57.097021",
+     "duration": 0.018786,
+     "end_time": "2024-11-26T23:24:18.186733",
      "exception": false,
-     "start_time": "2024-11-26T23:23:57.079019",
+     "start_time": "2024-11-26T23:24:18.167947",
      "status": "completed"
     },
     "tags": []
@@ -244,8 +244,8 @@
     "model_catboost = ModelInference(\n",
     "    # models=catboost_artifacts[\"models\"][:5],\n",
     "    # models=catboost_artifacts[\"models\"][5:10],\n",
-    "    # models=catboost_artifacts[\"models\"][10:],\n",
-    "    models=catboost_artifacts[\"models\"],\n",
+    "    models=catboost_artifacts[\"models\"][10:],\n",
+    "    # models=catboost_artifacts[\"models\"],\n",
     "    numerical_cols=catboost_artifacts[\"numerical_cols\"],\n",
     "    categorical_cols=catboost_artifacts[\"categorical_cols\"],\n",
     "    # text_cols=[\"LudRules\"],\n",
@@ -257,19 +257,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b39c7b91",
+   "id": "32ca9164",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:57.105101Z",
-     "iopub.status.busy": "2024-11-26T23:23:57.104768Z",
-     "iopub.status.idle": "2024-11-26T23:23:57.316772Z",
-     "shell.execute_reply": "2024-11-26T23:23:57.315660Z"
+     "iopub.execute_input": "2024-11-26T23:24:18.195201Z",
+     "iopub.status.busy": "2024-11-26T23:24:18.194840Z",
+     "iopub.status.idle": "2024-11-26T23:24:18.379233Z",
+     "shell.execute_reply": "2024-11-26T23:24:18.378166Z"
     },
     "papermill": {
-     "duration": 0.218728,
-     "end_time": "2024-11-26T23:23:57.319100",
+     "duration": 0.191445,
+     "end_time": "2024-11-26T23:24:18.381622",
      "exception": false,
-     "start_time": "2024-11-26T23:23:57.100372",
+     "start_time": "2024-11-26T23:24:18.190177",
      "status": "completed"
     },
     "tags": []
@@ -278,7 +278,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.12559595, -0.14268564, -0.01896763])"
+       "array([ 0.14115696, -0.12391075, -0.01206723])"
       ]
      },
      "execution_count": 5,
@@ -294,13 +294,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "307db231",
+   "id": "5161b213",
    "metadata": {
     "papermill": {
-     "duration": 0.002959,
-     "end_time": "2024-11-26T23:23:57.325617",
+     "duration": 0.003228,
+     "end_time": "2024-11-26T23:24:18.388324",
      "exception": false,
-     "start_time": "2024-11-26T23:23:57.322658",
+     "start_time": "2024-11-26T23:24:18.385096",
      "status": "completed"
     },
     "tags": []
@@ -313,19 +313,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "95dbb184",
+   "id": "eec75157",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:57.334144Z",
-     "iopub.status.busy": "2024-11-26T23:23:57.333202Z",
-     "iopub.status.idle": "2024-11-26T23:23:57.857368Z",
-     "shell.execute_reply": "2024-11-26T23:23:57.856465Z"
+     "iopub.execute_input": "2024-11-26T23:24:18.396792Z",
+     "iopub.status.busy": "2024-11-26T23:24:18.396391Z",
+     "iopub.status.idle": "2024-11-26T23:24:18.916617Z",
+     "shell.execute_reply": "2024-11-26T23:24:18.915473Z"
     },
     "papermill": {
-     "duration": 0.530867,
-     "end_time": "2024-11-26T23:23:57.859653",
+     "duration": 0.527441,
+     "end_time": "2024-11-26T23:24:18.919080",
      "exception": false,
-     "start_time": "2024-11-26T23:23:57.328786",
+     "start_time": "2024-11-26T23:24:18.391639",
      "status": "completed"
     },
     "tags": []
@@ -340,19 +340,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d69d006a",
+   "id": "c1248e65",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:57.868132Z",
-     "iopub.status.busy": "2024-11-26T23:23:57.867651Z",
-     "iopub.status.idle": "2024-11-26T23:23:57.873375Z",
-     "shell.execute_reply": "2024-11-26T23:23:57.872282Z"
+     "iopub.execute_input": "2024-11-26T23:24:18.928076Z",
+     "iopub.status.busy": "2024-11-26T23:24:18.927568Z",
+     "iopub.status.idle": "2024-11-26T23:24:18.933441Z",
+     "shell.execute_reply": "2024-11-26T23:24:18.932439Z"
     },
     "papermill": {
-     "duration": 0.012244,
-     "end_time": "2024-11-26T23:23:57.875481",
+     "duration": 0.012803,
+     "end_time": "2024-11-26T23:24:18.935644",
      "exception": false,
-     "start_time": "2024-11-26T23:23:57.863237",
+     "start_time": "2024-11-26T23:24:18.922841",
      "status": "completed"
     },
     "tags": []
@@ -369,19 +369,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "317f9694",
+   "id": "e10c625b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-26T23:23:57.883896Z",
-     "iopub.status.busy": "2024-11-26T23:23:57.883543Z",
-     "iopub.status.idle": "2024-11-26T23:23:58.473988Z",
-     "shell.execute_reply": "2024-11-26T23:23:58.473001Z"
+     "iopub.execute_input": "2024-11-26T23:24:18.944202Z",
+     "iopub.status.busy": "2024-11-26T23:24:18.943801Z",
+     "iopub.status.idle": "2024-11-26T23:24:19.498463Z",
+     "shell.execute_reply": "2024-11-26T23:24:19.497240Z"
     },
     "papermill": {
-     "duration": 0.597632,
-     "end_time": "2024-11-26T23:23:58.476543",
+     "duration": 0.561915,
+     "end_time": "2024-11-26T23:24:19.501062",
      "exception": false,
-     "start_time": "2024-11-26T23:23:57.878911",
+     "start_time": "2024-11-26T23:24:18.939147",
      "status": "completed"
     },
     "tags": []
@@ -403,13 +403,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0c08564",
+   "id": "cc1a6ccb",
    "metadata": {
     "papermill": {
-     "duration": 0.003899,
-     "end_time": "2024-11-26T23:23:58.483891",
+     "duration": 0.004259,
+     "end_time": "2024-11-26T23:24:19.508992",
      "exception": false,
-     "start_time": "2024-11-26T23:23:58.479992",
+     "start_time": "2024-11-26T23:24:19.504733",
      "status": "completed"
     },
     "tags": []
@@ -459,14 +459,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 13.133214,
-   "end_time": "2024-11-26T23:23:59.308301",
+   "duration": 13.748327,
+   "end_time": "2024-11-26T23:24:20.435604",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-26T23:23:46.175087",
+   "start_time": "2024-11-26T23:24:06.687277",
    "version": "2.6.0"
   }
  },
