--- a/kaggle/mcts-catboost.ipynb
+++ b/kaggle/mcts-catboost.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b0fdc209",
+   "id": "88bcb4ec",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:37:07.435599Z",
-     "iopub.status.busy": "2024-11-27T22:37:07.435018Z",
-     "iopub.status.idle": "2024-11-27T22:37:10.408118Z",
-     "shell.execute_reply": "2024-11-27T22:37:10.406834Z"
+     "iopub.execute_input": "2024-11-27T22:38:18.974778Z",
+     "iopub.status.busy": "2024-11-27T22:38:18.974279Z",
+     "iopub.status.idle": "2024-11-27T22:38:22.041398Z",
+     "shell.execute_reply": "2024-11-27T22:38:22.040239Z"
     },
     "papermill": {
-     "duration": 2.981274,
-     "end_time": "2024-11-27T22:37:10.410813",
+     "duration": 3.074852,
+     "end_time": "2024-11-27T22:38:22.043985",
      "exception": false,
-     "start_time": "2024-11-27T22:37:07.429539",
+     "start_time": "2024-11-27T22:38:18.969133",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84d0a9fb",
+   "id": "e1d104a5",
    "metadata": {
     "papermill": {
-     "duration": 0.002903,
-     "end_time": "2024-11-27T22:37:10.417205",
+     "duration": 0.002827,
+     "end_time": "2024-11-27T22:38:22.050162",
      "exception": false,
-     "start_time": "2024-11-27T22:37:10.414302",
+     "start_time": "2024-11-27T22:38:22.047335",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3dd7de46",
+   "id": "7bfa9b86",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:37:10.425451Z",
-     "iopub.status.busy": "2024-11-27T22:37:10.424921Z",
-     "iopub.status.idle": "2024-11-27T22:37:17.366665Z",
-     "shell.execute_reply": "2024-11-27T22:37:17.365027Z"
+     "iopub.execute_input": "2024-11-27T22:38:22.057687Z",
+     "iopub.status.busy": "2024-11-27T22:38:22.057168Z",
+     "iopub.status.idle": "2024-11-27T22:38:27.386481Z",
+     "shell.execute_reply": "2024-11-27T22:38:27.385345Z"
     },
     "papermill": {
-     "duration": 6.948851,
-     "end_time": "2024-11-27T22:37:17.369194",
+     "duration": 5.335866,
+     "end_time": "2024-11-27T22:38:27.388908",
      "exception": false,
-     "start_time": "2024-11-27T22:37:10.420343",
+     "start_time": "2024-11-27T22:38:22.053042",
      "status": "completed"
     },
     "tags": []
@@ -101,8 +101,8 @@
    "source": [
     "# Specify the path where you want to save the serialized function\n",
     "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fs24.pkl'\n",
-    "\n",
-    "catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_full.pkl'\n",
+    "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_full.pkl'\n",
+    "catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv2.pkl'\n",
     "\n",
     "# Load the function from the file\n",
     "with open(catboost_artifacts_path, 'rb') as f:\n",
@@ -112,19 +112,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ea3599d6",
+   "id": "683d7a6c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:37:17.377672Z",
-     "iopub.status.busy": "2024-11-27T22:37:17.377223Z",
-     "iopub.status.idle": "2024-11-27T22:37:17.386263Z",
-     "shell.execute_reply": "2024-11-27T22:37:17.384659Z"
+     "iopub.execute_input": "2024-11-27T22:38:27.396426Z",
+     "iopub.status.busy": "2024-11-27T22:38:27.396071Z",
+     "iopub.status.idle": "2024-11-27T22:38:27.403303Z",
+     "shell.execute_reply": "2024-11-27T22:38:27.402236Z"
     },
     "papermill": {
-     "duration": 0.016119,
-     "end_time": "2024-11-27T22:37:17.388730",
+     "duration": 0.013102,
+     "end_time": "2024-11-27T22:38:27.405126",
      "exception": false,
-     "start_time": "2024-11-27T22:37:17.372611",
+     "start_time": "2024-11-27T22:38:27.392024",
      "status": "completed"
     },
     "tags": []
@@ -148,19 +148,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "23009b8b",
+   "id": "90974eb1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:37:17.397509Z",
-     "iopub.status.busy": "2024-11-27T22:37:17.397056Z",
-     "iopub.status.idle": "2024-11-27T22:37:17.408856Z",
-     "shell.execute_reply": "2024-11-27T22:37:17.407698Z"
+     "iopub.execute_input": "2024-11-27T22:38:27.413135Z",
+     "iopub.status.busy": "2024-11-27T22:38:27.412764Z",
+     "iopub.status.idle": "2024-11-27T22:38:27.423608Z",
+     "shell.execute_reply": "2024-11-27T22:38:27.422601Z"
     },
     "papermill": {
-     "duration": 0.01884,
-     "end_time": "2024-11-27T22:37:17.410927",
+     "duration": 0.017588,
+     "end_time": "2024-11-27T22:38:27.425927",
      "exception": false,
-     "start_time": "2024-11-27T22:37:17.392087",
+     "start_time": "2024-11-27T22:38:27.408339",
      "status": "completed"
     },
     "tags": []
@@ -170,8 +170,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(numerical_cols): 588\n",
-      "len(categorical_cols): 10\n"
+      "len(numerical_cols): 368\n",
+      "len(categorical_cols): 5\n"
      ]
     }
    ],
@@ -259,19 +259,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8c300572",
+   "id": "8bc3d63d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:37:17.419596Z",
-     "iopub.status.busy": "2024-11-27T22:37:17.419122Z",
-     "iopub.status.idle": "2024-11-27T22:37:17.767280Z",
-     "shell.execute_reply": "2024-11-27T22:37:17.765987Z"
+     "iopub.execute_input": "2024-11-27T22:38:27.434425Z",
+     "iopub.status.busy": "2024-11-27T22:38:27.433627Z",
+     "iopub.status.idle": "2024-11-27T22:38:27.673344Z",
+     "shell.execute_reply": "2024-11-27T22:38:27.672288Z"
     },
     "papermill": {
-     "duration": 0.355648,
-     "end_time": "2024-11-27T22:37:17.770052",
+     "duration": 0.2466,
+     "end_time": "2024-11-27T22:38:27.676034",
      "exception": false,
-     "start_time": "2024-11-27T22:37:17.414404",
+     "start_time": "2024-11-27T22:38:27.429434",
      "status": "completed"
     },
     "tags": []
@@ -280,7 +280,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.13480791, -0.16216841, -0.01196988])"
+       "array([ 0.12853852, -0.13160347, -0.05588544])"
       ]
      },
      "execution_count": 5,
@@ -296,13 +296,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58744f43",
+   "id": "ca911999",
    "metadata": {
     "papermill": {
-     "duration": 0.003205,
-     "end_time": "2024-11-27T22:37:17.776952",
+     "duration": 0.003047,
+     "end_time": "2024-11-27T22:38:27.682695",
      "exception": false,
-     "start_time": "2024-11-27T22:37:17.773747",
+     "start_time": "2024-11-27T22:38:27.679648",
      "status": "completed"
     },
     "tags": []
@@ -315,19 +315,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2eb63ada",
+   "id": "5e385abf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:37:17.785685Z",
-     "iopub.status.busy": "2024-11-27T22:37:17.785169Z",
-     "iopub.status.idle": "2024-11-27T22:37:18.322952Z",
-     "shell.execute_reply": "2024-11-27T22:37:18.321640Z"
+     "iopub.execute_input": "2024-11-27T22:38:27.690728Z",
+     "iopub.status.busy": "2024-11-27T22:38:27.690334Z",
+     "iopub.status.idle": "2024-11-27T22:38:28.232475Z",
+     "shell.execute_reply": "2024-11-27T22:38:28.231488Z"
     },
     "papermill": {
-     "duration": 0.545208,
-     "end_time": "2024-11-27T22:37:18.325577",
+     "duration": 0.54902,
+     "end_time": "2024-11-27T22:38:28.234962",
      "exception": false,
-     "start_time": "2024-11-27T22:37:17.780369",
+     "start_time": "2024-11-27T22:38:27.685942",
      "status": "completed"
     },
     "tags": []
@@ -342,19 +342,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "af34c4e2",
+   "id": "6c1b8e8f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:37:18.334690Z",
-     "iopub.status.busy": "2024-11-27T22:37:18.334127Z",
-     "iopub.status.idle": "2024-11-27T22:37:18.340618Z",
-     "shell.execute_reply": "2024-11-27T22:37:18.339044Z"
+     "iopub.execute_input": "2024-11-27T22:38:28.243508Z",
+     "iopub.status.busy": "2024-11-27T22:38:28.242969Z",
+     "iopub.status.idle": "2024-11-27T22:38:28.248373Z",
+     "shell.execute_reply": "2024-11-27T22:38:28.247359Z"
     },
     "papermill": {
-     "duration": 0.014363,
-     "end_time": "2024-11-27T22:37:18.343620",
+     "duration": 0.012175,
+     "end_time": "2024-11-27T22:38:28.250680",
      "exception": false,
-     "start_time": "2024-11-27T22:37:18.329257",
+     "start_time": "2024-11-27T22:38:28.238505",
      "status": "completed"
     },
     "tags": []
@@ -371,19 +371,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "684e7ca0",
+   "id": "671d8d28",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:37:18.352353Z",
-     "iopub.status.busy": "2024-11-27T22:37:18.351929Z",
-     "iopub.status.idle": "2024-11-27T22:37:19.163904Z",
-     "shell.execute_reply": "2024-11-27T22:37:19.162772Z"
+     "iopub.execute_input": "2024-11-27T22:38:28.258965Z",
+     "iopub.status.busy": "2024-11-27T22:38:28.258603Z",
+     "iopub.status.idle": "2024-11-27T22:38:28.875084Z",
+     "shell.execute_reply": "2024-11-27T22:38:28.874033Z"
     },
     "papermill": {
-     "duration": 0.819193,
-     "end_time": "2024-11-27T22:37:19.166421",
+     "duration": 0.623321,
+     "end_time": "2024-11-27T22:38:28.877444",
      "exception": false,
-     "start_time": "2024-11-27T22:37:18.347228",
+     "start_time": "2024-11-27T22:38:28.254123",
      "status": "completed"
     },
     "tags": []
@@ -405,13 +405,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40831fd4",
+   "id": "2a7fccdf",
    "metadata": {
     "papermill": {
-     "duration": 0.004253,
-     "end_time": "2024-11-27T22:37:19.174836",
+     "duration": 0.004047,
+     "end_time": "2024-11-27T22:38:28.884966",
      "exception": false,
-     "start_time": "2024-11-27T22:37:19.170583",
+     "start_time": "2024-11-27T22:38:28.880919",
      "status": "completed"
     },
     "tags": []
@@ -461,14 +461,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 15.804814,
-   "end_time": "2024-11-27T22:37:20.102758",
+   "duration": 13.444337,
+   "end_time": "2024-11-27T22:38:29.609447",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-27T22:37:04.297944",
+   "start_time": "2024-11-27T22:38:16.165110",
    "version": "2.6.0"
   }
  },
