Kaggle Notebook | mcts-catboost | Version 25

--- a/kaggle/mcts-catboost.ipynb
+++ b/kaggle/mcts-catboost.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "88bcb4ec",
+   "id": "f9c3c6c3",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:38:18.974778Z",
-     "iopub.status.busy": "2024-11-27T22:38:18.974279Z",
-     "iopub.status.idle": "2024-11-27T22:38:22.041398Z",
-     "shell.execute_reply": "2024-11-27T22:38:22.040239Z"
+     "iopub.execute_input": "2024-11-27T22:40:10.078575Z",
+     "iopub.status.busy": "2024-11-27T22:40:10.077491Z",
+     "iopub.status.idle": "2024-11-27T22:40:13.466837Z",
+     "shell.execute_reply": "2024-11-27T22:40:13.465495Z"
     },
     "papermill": {
-     "duration": 3.074852,
-     "end_time": "2024-11-27T22:38:22.043985",
+     "duration": 3.397355,
+     "end_time": "2024-11-27T22:40:13.469630",
      "exception": false,
-     "start_time": "2024-11-27T22:38:18.969133",
+     "start_time": "2024-11-27T22:40:10.072275",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1d104a5",
+   "id": "8c7aa12c",
    "metadata": {
     "papermill": {
-     "duration": 0.002827,
-     "end_time": "2024-11-27T22:38:22.050162",
+     "duration": 0.003062,
+     "end_time": "2024-11-27T22:40:13.476179",
      "exception": false,
-     "start_time": "2024-11-27T22:38:22.047335",
+     "start_time": "2024-11-27T22:40:13.473117",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7bfa9b86",
+   "id": "edb50807",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:38:22.057687Z",
-     "iopub.status.busy": "2024-11-27T22:38:22.057168Z",
-     "iopub.status.idle": "2024-11-27T22:38:27.386481Z",
-     "shell.execute_reply": "2024-11-27T22:38:27.385345Z"
+     "iopub.execute_input": "2024-11-27T22:40:13.484403Z",
+     "iopub.status.busy": "2024-11-27T22:40:13.483898Z",
+     "iopub.status.idle": "2024-11-27T22:40:20.855913Z",
+     "shell.execute_reply": "2024-11-27T22:40:20.854695Z"
     },
     "papermill": {
-     "duration": 5.335866,
-     "end_time": "2024-11-27T22:38:27.388908",
+     "duration": 7.379777,
+     "end_time": "2024-11-27T22:40:20.859205",
      "exception": false,
-     "start_time": "2024-11-27T22:38:22.053042",
+     "start_time": "2024-11-27T22:40:13.479428",
      "status": "completed"
     },
     "tags": []
@@ -102,7 +102,8 @@
     "# Specify the path where you want to save the serialized function\n",
     "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fs24.pkl'\n",
     "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_full.pkl'\n",
-    "catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv2.pkl'\n",
+    "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv2.pkl'\n",
+    "catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv23.pkl'\n",
     "\n",
     "# Load the function from the file\n",
     "with open(catboost_artifacts_path, 'rb') as f:\n",
@@ -112,19 +113,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "683d7a6c",
+   "id": "b3b562ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:38:27.396426Z",
-     "iopub.status.busy": "2024-11-27T22:38:27.396071Z",
-     "iopub.status.idle": "2024-11-27T22:38:27.403303Z",
-     "shell.execute_reply": "2024-11-27T22:38:27.402236Z"
+     "iopub.execute_input": "2024-11-27T22:40:20.868913Z",
+     "iopub.status.busy": "2024-11-27T22:40:20.868485Z",
+     "iopub.status.idle": "2024-11-27T22:40:20.876910Z",
+     "shell.execute_reply": "2024-11-27T22:40:20.875532Z"
     },
     "papermill": {
-     "duration": 0.013102,
-     "end_time": "2024-11-27T22:38:27.405126",
+     "duration": 0.016134,
+     "end_time": "2024-11-27T22:40:20.879192",
      "exception": false,
-     "start_time": "2024-11-27T22:38:27.392024",
+     "start_time": "2024-11-27T22:40:20.863058",
      "status": "completed"
     },
     "tags": []
@@ -148,19 +149,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "90974eb1",
+   "id": "7805ef7b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:38:27.413135Z",
-     "iopub.status.busy": "2024-11-27T22:38:27.412764Z",
-     "iopub.status.idle": "2024-11-27T22:38:27.423608Z",
-     "shell.execute_reply": "2024-11-27T22:38:27.422601Z"
+     "iopub.execute_input": "2024-11-27T22:40:20.888823Z",
+     "iopub.status.busy": "2024-11-27T22:40:20.888218Z",
+     "iopub.status.idle": "2024-11-27T22:40:20.899537Z",
+     "shell.execute_reply": "2024-11-27T22:40:20.898332Z"
     },
     "papermill": {
-     "duration": 0.017588,
-     "end_time": "2024-11-27T22:38:27.425927",
+     "duration": 0.020475,
+     "end_time": "2024-11-27T22:40:20.903256",
      "exception": false,
-     "start_time": "2024-11-27T22:38:27.408339",
+     "start_time": "2024-11-27T22:40:20.882781",
      "status": "completed"
     },
     "tags": []
@@ -170,8 +171,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(numerical_cols): 368\n",
-      "len(categorical_cols): 5\n"
+      "len(numerical_cols): 213\n",
+      "len(categorical_cols): 9\n"
      ]
     }
    ],
@@ -259,19 +260,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8bc3d63d",
+   "id": "046bdb01",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:38:27.434425Z",
-     "iopub.status.busy": "2024-11-27T22:38:27.433627Z",
-     "iopub.status.idle": "2024-11-27T22:38:27.673344Z",
-     "shell.execute_reply": "2024-11-27T22:38:27.672288Z"
+     "iopub.execute_input": "2024-11-27T22:40:20.912388Z",
+     "iopub.status.busy": "2024-11-27T22:40:20.912007Z",
+     "iopub.status.idle": "2024-11-27T22:40:21.146062Z",
+     "shell.execute_reply": "2024-11-27T22:40:21.144829Z"
     },
     "papermill": {
-     "duration": 0.2466,
-     "end_time": "2024-11-27T22:38:27.676034",
+     "duration": 0.241671,
+     "end_time": "2024-11-27T22:40:21.148458",
      "exception": false,
-     "start_time": "2024-11-27T22:38:27.429434",
+     "start_time": "2024-11-27T22:40:20.906787",
      "status": "completed"
     },
     "tags": []
@@ -280,7 +281,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.12853852, -0.13160347, -0.05588544])"
+       "array([ 0.12576101, -0.11860058, -0.04116934])"
       ]
      },
      "execution_count": 5,
@@ -296,13 +297,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca911999",
+   "id": "f65a0f1a",
    "metadata": {
     "papermill": {
-     "duration": 0.003047,
-     "end_time": "2024-11-27T22:38:27.682695",
+     "duration": 0.003674,
+     "end_time": "2024-11-27T22:40:21.155691",
      "exception": false,
-     "start_time": "2024-11-27T22:38:27.679648",
+     "start_time": "2024-11-27T22:40:21.152017",
      "status": "completed"
     },
     "tags": []
@@ -315,19 +316,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5e385abf",
+   "id": "0604506f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:38:27.690728Z",
-     "iopub.status.busy": "2024-11-27T22:38:27.690334Z",
-     "iopub.status.idle": "2024-11-27T22:38:28.232475Z",
-     "shell.execute_reply": "2024-11-27T22:38:28.231488Z"
+     "iopub.execute_input": "2024-11-27T22:40:21.164397Z",
+     "iopub.status.busy": "2024-11-27T22:40:21.164012Z",
+     "iopub.status.idle": "2024-11-27T22:40:21.823073Z",
+     "shell.execute_reply": "2024-11-27T22:40:21.821822Z"
     },
     "papermill": {
-     "duration": 0.54902,
-     "end_time": "2024-11-27T22:38:28.234962",
+     "duration": 0.666659,
+     "end_time": "2024-11-27T22:40:21.825787",
      "exception": false,
-     "start_time": "2024-11-27T22:38:27.685942",
+     "start_time": "2024-11-27T22:40:21.159128",
      "status": "completed"
     },
     "tags": []
@@ -342,19 +343,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6c1b8e8f",
+   "id": "06044758",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:38:28.243508Z",
-     "iopub.status.busy": "2024-11-27T22:38:28.242969Z",
-     "iopub.status.idle": "2024-11-27T22:38:28.248373Z",
-     "shell.execute_reply": "2024-11-27T22:38:28.247359Z"
+     "iopub.execute_input": "2024-11-27T22:40:21.835638Z",
+     "iopub.status.busy": "2024-11-27T22:40:21.834406Z",
+     "iopub.status.idle": "2024-11-27T22:40:21.840336Z",
+     "shell.execute_reply": "2024-11-27T22:40:21.839271Z"
     },
     "papermill": {
-     "duration": 0.012175,
-     "end_time": "2024-11-27T22:38:28.250680",
+     "duration": 0.013304,
+     "end_time": "2024-11-27T22:40:21.842919",
      "exception": false,
-     "start_time": "2024-11-27T22:38:28.238505",
+     "start_time": "2024-11-27T22:40:21.829615",
      "status": "completed"
     },
     "tags": []
@@ -371,19 +372,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "671d8d28",
+   "id": "8a8ef9be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:38:28.258965Z",
-     "iopub.status.busy": "2024-11-27T22:38:28.258603Z",
-     "iopub.status.idle": "2024-11-27T22:38:28.875084Z",
-     "shell.execute_reply": "2024-11-27T22:38:28.874033Z"
+     "iopub.execute_input": "2024-11-27T22:40:21.851879Z",
+     "iopub.status.busy": "2024-11-27T22:40:21.851460Z",
+     "iopub.status.idle": "2024-11-27T22:40:22.515509Z",
+     "shell.execute_reply": "2024-11-27T22:40:22.513924Z"
     },
     "papermill": {
-     "duration": 0.623321,
-     "end_time": "2024-11-27T22:38:28.877444",
+     "duration": 0.671718,
+     "end_time": "2024-11-27T22:40:22.518431",
      "exception": false,
-     "start_time": "2024-11-27T22:38:28.254123",
+     "start_time": "2024-11-27T22:40:21.846713",
      "status": "completed"
     },
     "tags": []
@@ -405,13 +406,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a7fccdf",
+   "id": "72ee0753",
    "metadata": {
     "papermill": {
-     "duration": 0.004047,
-     "end_time": "2024-11-27T22:38:28.884966",
+     "duration": 0.004399,
+     "end_time": "2024-11-27T22:40:22.527353",
      "exception": false,
-     "start_time": "2024-11-27T22:38:28.880919",
+     "start_time": "2024-11-27T22:40:22.522954",
      "status": "completed"
     },
     "tags": []
@@ -461,14 +462,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 13.444337,
-   "end_time": "2024-11-27T22:38:29.609447",
+   "duration": 16.356965,
+   "end_time": "2024-11-27T22:40:23.455173",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-27T22:38:16.165110",
+   "start_time": "2024-11-27T22:40:07.098208",
    "version": "2.6.0"
   }
  },
