Kaggle Notebook | mcts-catboost | Version 26

--- a/kaggle/mcts-catboost.ipynb
+++ b/kaggle/mcts-catboost.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f9c3c6c3",
+   "id": "01cdb30e",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:40:10.078575Z",
-     "iopub.status.busy": "2024-11-27T22:40:10.077491Z",
-     "iopub.status.idle": "2024-11-27T22:40:13.466837Z",
-     "shell.execute_reply": "2024-11-27T22:40:13.465495Z"
+     "iopub.execute_input": "2024-11-27T22:41:17.928302Z",
+     "iopub.status.busy": "2024-11-27T22:41:17.927767Z",
+     "iopub.status.idle": "2024-11-27T22:41:20.904046Z",
+     "shell.execute_reply": "2024-11-27T22:41:20.902778Z"
     },
     "papermill": {
-     "duration": 3.397355,
-     "end_time": "2024-11-27T22:40:13.469630",
+     "duration": 2.984075,
+     "end_time": "2024-11-27T22:41:20.906381",
      "exception": false,
-     "start_time": "2024-11-27T22:40:10.072275",
+     "start_time": "2024-11-27T22:41:17.922306",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c7aa12c",
+   "id": "12b21cdc",
    "metadata": {
     "papermill": {
-     "duration": 0.003062,
-     "end_time": "2024-11-27T22:40:13.476179",
+     "duration": 0.002814,
+     "end_time": "2024-11-27T22:41:20.913079",
      "exception": false,
-     "start_time": "2024-11-27T22:40:13.473117",
+     "start_time": "2024-11-27T22:41:20.910265",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "edb50807",
+   "id": "41a41915",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:40:13.484403Z",
-     "iopub.status.busy": "2024-11-27T22:40:13.483898Z",
-     "iopub.status.idle": "2024-11-27T22:40:20.855913Z",
-     "shell.execute_reply": "2024-11-27T22:40:20.854695Z"
+     "iopub.execute_input": "2024-11-27T22:41:20.920508Z",
+     "iopub.status.busy": "2024-11-27T22:41:20.920044Z",
+     "iopub.status.idle": "2024-11-27T22:41:26.203448Z",
+     "shell.execute_reply": "2024-11-27T22:41:26.202283Z"
     },
     "papermill": {
-     "duration": 7.379777,
-     "end_time": "2024-11-27T22:40:20.859205",
+     "duration": 5.29015,
+     "end_time": "2024-11-27T22:41:26.206058",
      "exception": false,
-     "start_time": "2024-11-27T22:40:13.479428",
+     "start_time": "2024-11-27T22:41:20.915908",
      "status": "completed"
     },
     "tags": []
@@ -103,7 +103,8 @@
     "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fs24.pkl'\n",
     "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_full.pkl'\n",
     "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv2.pkl'\n",
-    "catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv23.pkl'\n",
+    "# catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv23.pkl'\n",
+    "catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict_fsv34.pkl'\n",
     "\n",
     "# Load the function from the file\n",
     "with open(catboost_artifacts_path, 'rb') as f:\n",
@@ -113,19 +114,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b3b562ba",
+   "id": "a475cc14",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:40:20.868913Z",
-     "iopub.status.busy": "2024-11-27T22:40:20.868485Z",
-     "iopub.status.idle": "2024-11-27T22:40:20.876910Z",
-     "shell.execute_reply": "2024-11-27T22:40:20.875532Z"
+     "iopub.execute_input": "2024-11-27T22:41:26.213974Z",
+     "iopub.status.busy": "2024-11-27T22:41:26.213568Z",
+     "iopub.status.idle": "2024-11-27T22:41:26.221058Z",
+     "shell.execute_reply": "2024-11-27T22:41:26.219853Z"
     },
     "papermill": {
-     "duration": 0.016134,
-     "end_time": "2024-11-27T22:40:20.879192",
+     "duration": 0.013584,
+     "end_time": "2024-11-27T22:41:26.222940",
      "exception": false,
-     "start_time": "2024-11-27T22:40:20.863058",
+     "start_time": "2024-11-27T22:41:26.209356",
      "status": "completed"
     },
     "tags": []
@@ -149,19 +150,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7805ef7b",
+   "id": "357246ea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:40:20.888823Z",
-     "iopub.status.busy": "2024-11-27T22:40:20.888218Z",
-     "iopub.status.idle": "2024-11-27T22:40:20.899537Z",
-     "shell.execute_reply": "2024-11-27T22:40:20.898332Z"
+     "iopub.execute_input": "2024-11-27T22:41:26.231414Z",
+     "iopub.status.busy": "2024-11-27T22:41:26.231044Z",
+     "iopub.status.idle": "2024-11-27T22:41:26.242535Z",
+     "shell.execute_reply": "2024-11-27T22:41:26.241341Z"
     },
     "papermill": {
-     "duration": 0.020475,
-     "end_time": "2024-11-27T22:40:20.903256",
+     "duration": 0.018434,
+     "end_time": "2024-11-27T22:41:26.244692",
      "exception": false,
-     "start_time": "2024-11-27T22:40:20.882781",
+     "start_time": "2024-11-27T22:41:26.226258",
      "status": "completed"
     },
     "tags": []
@@ -171,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(numerical_cols): 213\n",
+      "len(numerical_cols): 220\n",
       "len(categorical_cols): 9\n"
      ]
     }
@@ -260,19 +261,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "046bdb01",
+   "id": "551df50d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:40:20.912388Z",
-     "iopub.status.busy": "2024-11-27T22:40:20.912007Z",
-     "iopub.status.idle": "2024-11-27T22:40:21.146062Z",
-     "shell.execute_reply": "2024-11-27T22:40:21.144829Z"
+     "iopub.execute_input": "2024-11-27T22:41:26.252958Z",
+     "iopub.status.busy": "2024-11-27T22:41:26.252551Z",
+     "iopub.status.idle": "2024-11-27T22:41:26.464875Z",
+     "shell.execute_reply": "2024-11-27T22:41:26.463716Z"
     },
     "papermill": {
-     "duration": 0.241671,
-     "end_time": "2024-11-27T22:40:21.148458",
+     "duration": 0.219125,
+     "end_time": "2024-11-27T22:41:26.467095",
      "exception": false,
-     "start_time": "2024-11-27T22:40:20.906787",
+     "start_time": "2024-11-27T22:41:26.247970",
      "status": "completed"
     },
     "tags": []
@@ -281,7 +282,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.12576101, -0.11860058, -0.04116934])"
+       "array([ 0.15178977, -0.15200772, -0.05162869])"
       ]
      },
      "execution_count": 5,
@@ -297,13 +298,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f65a0f1a",
+   "id": "a0e201e3",
    "metadata": {
     "papermill": {
-     "duration": 0.003674,
-     "end_time": "2024-11-27T22:40:21.155691",
+     "duration": 0.003161,
+     "end_time": "2024-11-27T22:41:26.473760",
      "exception": false,
-     "start_time": "2024-11-27T22:40:21.152017",
+     "start_time": "2024-11-27T22:41:26.470599",
      "status": "completed"
     },
     "tags": []
@@ -316,19 +317,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0604506f",
+   "id": "3abbdb85",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:40:21.164397Z",
-     "iopub.status.busy": "2024-11-27T22:40:21.164012Z",
-     "iopub.status.idle": "2024-11-27T22:40:21.823073Z",
-     "shell.execute_reply": "2024-11-27T22:40:21.821822Z"
+     "iopub.execute_input": "2024-11-27T22:41:26.482351Z",
+     "iopub.status.busy": "2024-11-27T22:41:26.481888Z",
+     "iopub.status.idle": "2024-11-27T22:41:26.961269Z",
+     "shell.execute_reply": "2024-11-27T22:41:26.960214Z"
     },
     "papermill": {
-     "duration": 0.666659,
-     "end_time": "2024-11-27T22:40:21.825787",
+     "duration": 0.486616,
+     "end_time": "2024-11-27T22:41:26.963729",
      "exception": false,
-     "start_time": "2024-11-27T22:40:21.159128",
+     "start_time": "2024-11-27T22:41:26.477113",
      "status": "completed"
     },
     "tags": []
@@ -343,19 +344,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "06044758",
+   "id": "ea185f4e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:40:21.835638Z",
-     "iopub.status.busy": "2024-11-27T22:40:21.834406Z",
-     "iopub.status.idle": "2024-11-27T22:40:21.840336Z",
-     "shell.execute_reply": "2024-11-27T22:40:21.839271Z"
+     "iopub.execute_input": "2024-11-27T22:41:26.972840Z",
+     "iopub.status.busy": "2024-11-27T22:41:26.971761Z",
+     "iopub.status.idle": "2024-11-27T22:41:26.977435Z",
+     "shell.execute_reply": "2024-11-27T22:41:26.976501Z"
     },
     "papermill": {
-     "duration": 0.013304,
-     "end_time": "2024-11-27T22:40:21.842919",
+     "duration": 0.012054,
+     "end_time": "2024-11-27T22:41:26.979326",
      "exception": false,
-     "start_time": "2024-11-27T22:40:21.829615",
+     "start_time": "2024-11-27T22:41:26.967272",
      "status": "completed"
     },
     "tags": []
@@ -372,19 +373,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8a8ef9be",
+   "id": "52fd023c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:40:21.851879Z",
-     "iopub.status.busy": "2024-11-27T22:40:21.851460Z",
-     "iopub.status.idle": "2024-11-27T22:40:22.515509Z",
-     "shell.execute_reply": "2024-11-27T22:40:22.513924Z"
+     "iopub.execute_input": "2024-11-27T22:41:26.987975Z",
+     "iopub.status.busy": "2024-11-27T22:41:26.987237Z",
+     "iopub.status.idle": "2024-11-27T22:41:27.557102Z",
+     "shell.execute_reply": "2024-11-27T22:41:27.555948Z"
     },
     "papermill": {
-     "duration": 0.671718,
-     "end_time": "2024-11-27T22:40:22.518431",
+     "duration": 0.576905,
+     "end_time": "2024-11-27T22:41:27.559639",
      "exception": false,
-     "start_time": "2024-11-27T22:40:21.846713",
+     "start_time": "2024-11-27T22:41:26.982734",
      "status": "completed"
     },
     "tags": []
@@ -406,13 +407,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72ee0753",
+   "id": "63f32eb3",
    "metadata": {
     "papermill": {
-     "duration": 0.004399,
-     "end_time": "2024-11-27T22:40:22.527353",
+     "duration": 0.003962,
+     "end_time": "2024-11-27T22:41:27.567075",
      "exception": false,
-     "start_time": "2024-11-27T22:40:22.522954",
+     "start_time": "2024-11-27T22:41:27.563113",
      "status": "completed"
     },
     "tags": []
@@ -462,14 +463,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 16.356965,
-   "end_time": "2024-11-27T22:40:23.455173",
+   "duration": 13.199255,
+   "end_time": "2024-11-27T22:41:28.392297",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-27T22:40:07.098208",
+   "start_time": "2024-11-27T22:41:15.193042",
    "version": "2.6.0"
   }
  },
